<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dip">

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/target_pace"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <com.madefromcorn.runtracker.uicommon.PaceSpinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pace_spinner"
                app:minMinutes="3"
                app:maxMinutes="30"/>
    </LinearLayout>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/targeted_distance"/>

    <Spinner
            android:id="@+id/distance_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">
        <Button
                android:layout_gravity="bottom"
                android:id="@+id/run_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/run_text"/>
    </LinearLayout>

</LinearLayout>