<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:paddingBottom="20dip"
              android:baselineAligned="false">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.3333333333333333">
        <NumberPicker
                android:id="@+id/hour_picker"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_label"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.3333333333333333">
        <NumberPicker
                android:id="@+id/min_picker"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes_label"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.3333333333333333">
        <NumberPicker
                android:id="@+id/sec_picker"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds_label"/>
    </LinearLayout>

</LinearLayout>